--- a/src/View/ModifyCustomer.fxml
+++ b/src/View/ModifyCustomer.fxml
@@ -43,7 +43,7 @@
             <cursor>
                 <Cursor fx:constant="HAND" />
             </cursor></Button>
-        <Label layoutX="121.0" layoutY="14.0" text="Add Customer:">
+        <Label layoutX="121.0" layoutY="14.0" text="Modify Customer:">
             <font>
                 <Font name="System Bold" size="14.0" />
             </font>
